updates to sql and socket data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,10 @@
 		></script>
 		<script type="text/javascript" src="/scripts/script.js"></script>
 		<script src="/scripts/client.js"></script>
+		<script>
+			document.getElementById('sendRequest');
+		</script>
+
 		<title>Tyler Caceres - messaging app example</title>
 	</head>
 	<body>
@@ -42,5 +46,7 @@
 				<button type="submit">SUBMIT</button>
 			</Form>
 		</div>
+
+		<button id="sendRequest"></button>
 	</body>
 </html>
